# rs-rolodex

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md
src/: app.rs  cli.rs  config.rs  contact.rs  db.rs  error.rs  layout.rs  lib.rs  main.rs  message.rs  mode.rs  run.rs  trace.rs  tui.rs  ui.rs
src/app/: message.rs  mod.rs  state.rs  ui.rs  update.rs
src/components/: component.rs  mod.rs
src/components/app/: mod.rs
src/components/browse/: mod.rs
src/components/contact_list/: mod.rs
src/components/delete_confirmation/: mod.rs
src/components/error_dialog/: mod.rs
src/components/form/: mod.rs
src/components/input/: mod.rs
src/components/search/: mod.rs
src/components/status_bar/: mod.rs
src/form/: add_contact.rs
src/input/: add_contact.rs  browse.rs  delete_confirmation.rs  handler.rs  mod.rs
src/modal/: confirm_delete.rs  edit_contact.rs  message.rs  mod.rs
src/model/: contact.rs  mod.rs
src/tui/: mod.rs
src/ui/: layout.rs  mod.rs
src/ui/components/: add_contact.rs  app.rs  delete_confirmation.rs  mod.rs  text_field.rs
src/ui/components/add_contact/: message.rs  mod.rs
src/ui/components/app/: message.rs  mod.rs
src/ui/components/app/browse/: message.rs  mod.rs
src/ui/components/app/browse/contact_list/: message.rs  mod.rs
src/ui/components/app/browse/search/: message.rs  mod.rs
src/ui/components/contact_form/: message.rs  mod.rs
src/ui/components/delete_confirmation/: message.rs  mod.rs
src/ui/components/text_field/: message.rs  mod.rs
src/view/: add_contact.rs  browse.rs  delete_confirmation.rs  error.rs  mod.rs
tests/: integration_tests.rs
