[package]
name = "rolodex-tui"
version = "1.0.0"
edition = "2024"
authors = ["Shane Poppleton <shane@bjja.com.au>"]
description = "A fast and minimal terminal-based contact manager built in Rust"
license = "MIT"
repository = "https://github.com/popplestones/rs-rolodex"
homepage = "https://github.com/popplestones/rs-rolodex"
documentation = "https://docs.rs/rolodex"
readme = "README.md"
keywords = ["cli", "contacts", "tui", "terminal", "rolodex"]
categories = ["command-line-utilities", "database-implementations"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
directories = "6.0.0"
fuzzy-matcher = "0.3.7"
names = "0.14.0"
rand = "0.9.1"
ratatui = "0.29.0"
rusqlite = "0.36.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
tempfile = "3.8.1"
